# object_classification

./: .gitignore  CMakeLists.txt  ImageConverter.cpp  ImageConverter.h  ImageLoader.cpp  ImageLoader.h  ImageProvider.cpp  ImageProvider.h  MainForm.ui.qml  MyItem.qml  Split Dataset.py  common.cpp  common.h  dictionary.xml  main.cpp  main.qml  qml.qrc  train.cpp
